--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -49,6 +49,10 @@
         <source>form.label_birth</source>
         <target>Date de naissance</target>
       </trans-unit>
+      <trans-unit id="form.help_birth">
+        <source>form.help_birth</source>
+        <target>Vous devez avoir au moins 18 ans</target>
+      </trans-unit>
       <trans-unit id="form.label_password">
         <source>form.label_password</source>
         <target>Mot de passe</target>
