--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -45,12 +45,12 @@
         <source>form.placeholder_email</source>
         <target>Saisissez votre adresse mail</target>
       </trans-unit>
-      <trans-unit id="form.label_birth">
-        <source>form.label_birth</source>
+      <trans-unit id="form.label_birthDate">
+        <source>form.label_birthDate</source>
         <target>Date de naissance</target>
       </trans-unit>
-      <trans-unit id="form.help_birth">
-        <source>form.help_birth</source>
+      <trans-unit id="form.help_birthDate">
+        <source>form.help_birthDate</source>
         <target>Vous devez avoir au moins 18 ans</target>
       </trans-unit>
       <trans-unit id="form.label_password">
