--- a/translations/validators.fr.xlf
+++ b/translations/validators.fr.xlf
@@ -42,6 +42,14 @@
         <source>user.birthDate.not_null</source>
         <target>Veuillez renseigner votre date de naissance.</target>
       </trans-unit>
+      <trans-unit id="user.date.error_null">
+        <source>user.date.error_null</source>
+        <target>Veuillez renseigner votre date de naissance.</target>
+      </trans-unit>
+      <trans-unit id="user.date.error_format">
+        <source>user.date.error_format</source>
+        <target>Mauvais format de date.</target>
+      </trans-unit>
       <!-- standard translation -->
       <trans-unit id="zh5oKD9" resname="This value should be false.">
         <source>This value should be false.</source>
