--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -137,6 +137,10 @@
         <source>login.alert.msg_loggued</source>
         <target>You are loggued in as</target>
       </trans-unit>
+      <trans-unit id="registration.message_successfull">
+        <source>registration.message_successfull</source>
+        <target>Welcome! Your are now registered.</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
