--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -165,6 +165,10 @@
         <source>profile.text_register</source>
         <target>You have not subscribed to any subscription.</target>
       </trans-unit>
+      <trans-unit id="profile.title_dashboard">
+        <source>profile.title_dashboard</source>
+        <target>Dashboard</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
