--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -81,6 +81,14 @@
         <source>form.help_password</source>
         <target>Minimum length : 8 characters</target>
       </trans-unit>
+       <trans-unit id="form.label_profession">
+        <source>form.label_profession</source>
+        <target>Profession</target>
+      </trans-unit>
+      <trans-unit id="form.placeholder_profession">
+        <source>form.placeholder_profession</source>
+        <target>What is your profession ?</target>
+      </trans-unit>
       <trans-unit id="form.btn_register">
         <source>form.btn_register</source>
         <target>Register</target>
