tranlation of modal window for deletion of account and user_checker

--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -245,6 +245,34 @@
         <source>update.profile.successfull</source>
         <target>Votre profil a été mis à jour avec succès</target>
       </trans-unit>
+      <trans-unit id="profile.btn_update">
+        <source>profile.btn_update</source>
+        <target>Modifier mon profil</target>
+      </trans-unit>
+      <trans-unit id="profile.btn_delete">
+        <source>profile.btn_delete</source>
+        <target>Supprimer mon compte</target>
+      </trans-unit>
+      <trans-unit id="btn.cancel">
+        <source>btn.cancel</source>
+        <target>Annuler</target>
+      </trans-unit>
+      <trans-unit id="modal.title.account_delete">
+        <source>modal.title.account_delete</source>
+        <target>Suppression de votre compte</target>
+      </trans-unit>
+      <trans-unit id="modal.account.message_delete1">
+        <source>modal.account.message_delete1</source>
+        <target>Attention,</target>
+      </trans-unit>
+      <trans-unit id="modal.account.message_delete2">
+        <source>modal.account.message_delete2</source>
+        <target>La suppression de votre compte est définitive et entraine la perte irréversible de vos données.</target>
+      </trans-unit>
+      <trans-unit id="modal.account.message_delete3">
+        <source>modal.account.message_delete3</source>
+        <target>merci de confirmer la suppression de votre compte.</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
